--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Multi Color HTML Template</title>
+    <title>Kurco TV</title>
 <!--
 
 Template 2086 Multi Color
@@ -52,13 +52,13 @@ http://www.tooplate.com/view/2086-multi-color
                         <div class="collapse navbar-toggleable-md text-xs-center text-uppercase tm-navbar" id="tmNavbar">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item active selected">
-                                    <a class="nav-link" href="#0" data-no="1">Multi One <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="#0" data-no="1">2D Animation REEL <span class="sr-only">(current)</span></a>
                                 </li>                                
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="2">Multi Two</a>
+                                    <a class="nav-link" href="#0" data-no="2">GALERIA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="3">Multi Three</a>
+                                    <a class="nav-link" href="#0" data-no="3">GIPHY</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#0" data-no="4">Our Team</a>
