--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     <a class="nav-link" href="#0" data-no="4">Our Team</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="5">Keep in touch</a>
+                                    <a class="nav-link" href="#0" data-no="5">CONTACT</a>
                                 </li>
                             </ul>
                         </div>                        
