--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ http://www.tooplate.com/view/2086-multi-color
                 <nav class="navbar">
                     <div class="tm-navbar-bg">
                         
-                        <a class="navbar-brand text-uppercase" href="#"><i class="fa fa-gears tm-brand-icon"></i>Multi Color</a>
+                        <a class="navbar-brand text-uppercase" href="#"></i>Kurco TV</a>
 
                         <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                             &#9776;
@@ -54,6 +54,9 @@ http://www.tooplate.com/view/2086-multi-color
                                 <li class="nav-item active selected">
                                     <a class="nav-link" href="#0" data-no="1">2D Animation REEL <span class="sr-only">(current)</span></a>
                                 </li>                                
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#0" data-no="2">GALERIA</a> 
+				    </li>                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="#0" data-no="2">GALERIA</a>
                                 </li>
