--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@ http://www.tooplate.com/view/2086-multi-color
                                 <div class="tm-img-gallery gallery-one">
                                 <!-- Gallery One pop up connected with JS code below -->                                    
                                     <div class="tm-img-gallery-info-container">                                    
-                                        <h2 class="tm-text-title tm-gallery-title tm-white"><span class="tm-white">Multi Color Image Gallery</span></h2>
-                                        <p class="tm-text">This responsive HTML template includes three gallery pages. Multi color is designed by Tooplate. You may use this layout for your website.
-                                        </p>
+                                        <h2 class="tm-text-title tm-gallery-title tm-white"><span class="tm-white">2D Animation Reel</span></h2>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
